tests/compile_fail/handle_scope_escape_lifetime.stderr
error[E0597]: `scope2` does not live long enough
  --> $DIR/handle_scope_escape_lifetime.rs:10:43
   |
8  |   let _local = {
   |       ------ borrow later stored here
9  |     let mut scope2 = v8::HandleScope::new(&mut scope1);
10 |     let mut scope3 = v8::HandleScope::new(&mut scope2);
   |                                           ^^^^^^^^^^^ borrowed value does not live long enough
...
14 |   };
   |   - `scope2` dropped here while still borrowed
